# droidfish

app/: .gitignore  build.gradle
app/src/androidTest/java/org/petero/droidfish/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: stockfish
app/src/main/assets/armeabi-v7a/: stockfish  stockfish-nopie
app/src/main/assets/x86/: stockfish  stockfish-nopie
app/src/main/assets/x86_64/: stockfish
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/stockfish/: Android.mk  Application.mk  build.cmd  build.sh  misc.cpp
app/src/main/java/org/petero/droidfish/: DroidFish.java
app/src/main/java/org/petero/droidfish/activities/: PGNFile.java
app/src/main/java/org/petero/droidfish/engine/: DroidComputerPlayer.java  EngineUtil.java  UCIEngineBase.java
app/src/main/java/org/petero/droidfish/gamelogic/: DroidChessController.java
app/src/test/java/org/petero/droidfish/: ExampleUnitTest.java
